[package]
name = "tihle"
version = "0.1.0"
authors = ["Peter Marheine <peter@taricorp.net>"]
edition = "2018"
license = "GPL-3.0-only"

build = "build.rs"

[[bin]]
name = "tihle"

[profile.release]
lto = true

[features]
# env_logger supports regex filtering which can be enabled by turning on
# env_logger/regex if desired.
# log/release_max_level_info (or similar) can also be turned on to remove
# debug logs from the binary completely.

[dependencies]
arr_macro = "0.1.3"
bitflags = "1.0"
env_logger = { version = "0.7.1", default-features = false, features = ["termcolor", "humantime", "atty"] }
log = "0.4.8"
num-derive = "0.3"
num-traits = "0.2"
sdl2 = { version = "0.34" }

[build-dependencies]
cc = "1.0"
walkdir = "2"

[dev-dependencies]
quickcheck = { version = "0.9.1", default-features = false, features = ["use_logging"] }
quickcheck_macros = "0.9.1"
