[package]
name = "tihle"
version = "0.2.0"
authors = ["Peter Marheine <peter@taricorp.net>"]
edition = "2018"
license = "GPL-3.0-only"

build = "build.rs"
default-run = "tihle"

[[bin]]
name = "tihle"

[[bin]]
name = "debug"
required-features = [ "debug-cli" ]

[profile.release]
lto = true

[features]
# env_logger supports regex filtering which can be enabled by turning on
# env_logger/regex if desired.
# log/release_max_level_info (or similar) can also be turned on to remove
# debug logs from the binary completely.
default = [ "debug-cli" ]

git-build-info = [ "built/git2" ]
debug-cli = [ "crossbeam-channel", "ctrlc", "rustyline" ]

[dependencies]
arr_macro = "0.1.3"
bitflags = "1.0"
log = "0.4.8"
num-derive = "0.3"
num-traits = "0.2"
sdl2 = { version = "0.35" }

clap = { version = "2" }
crossbeam-channel = { version = "0.4", optional = true }
ctrlc = { version = "3", optional = true }
rustyline = { version = "6", optional = true }
serde = { version = "1", features = [ "derive" ] }
serde_json = { version = "1" }

[target.'cfg(not(target_os = "emscripten"))'.dependencies]
env_logger = { version = "0.9", default-features = false, features = ["termcolor", "humantime", "atty"] }

[target.'cfg(target_os = "emscripten")'.dependencies]
simple_logger = { version = "2", default-features = false, features = ["timestamps"] }

[build-dependencies]
cc = "1"
embed-resource = "1.3.3"
walkdir = "2"

[build-dependencies.built]
version = "0.5"
features = [ "chrono" ]

[build-dependencies.spasm-multipage]
path = "os/spasm-multipage"

[dev-dependencies]
quickcheck = { version = "1", default-features = false, features = ["use_logging"] }
quickcheck_macros = "1"
