[package]
name = "spasm-multipage"
version = "0.1.0"
authors = ["Peter Marheine <peter@taricorp.net>"]
edition = "2018"

[lib]

[[bin]]
name = "spasm-multipage"
required-features = [ "cli" ]

[features]
cli = ["clap"]

[dependencies]
log = "0.4"
petgraph = "0.6"
tempdir = "0.3"

[dependencies.clap]
version = "3"
optional = true
default-features = false

[dependencies.regex]
version = "1"
features = [ "std" ]
